ingress-images/Deployment-imagesurvey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydpimagesurvey
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy to imagesurvey"
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      dev: imagesurvey-pods
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: imagesurveypods
      labels:
        dev: imagesurvey-pods
    spec:
      containers:
        - name: myimagesurveycontainer
          image: 100944065201.dkr.ecr.ap-south-1.amazonaws.com/prod/images:imagesurvey
          ports:
            - containerPort: 80
          imagePullPolicy: Always
