ingress-images/Deployment-podtalk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydppodtalk
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy to podtalk"
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      dev: podtalk-pods
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: mypodtalkpods
      labels:
        dev: podtalk-pods
    spec:
      containers:
        - name: mypodtalkcontainer
          image: 100944065201.dkr.ecr.ap-south-1.amazonaws.com/prod/images:podtalk
          ports:
            - containerPort: 80
          imagePullPolicy: Always
