ingress-images/Service-imagesurvey.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: mysvcdpimagesurvey
    namespace: prod
  spec:
    type: ClusterIP
    selector:
      dev: imagesurvey-pods
    ports:
      - port: 80
