ingress-images/Service-podtalk.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: mysvcdppodtalk
    namespace: prod
  spec:
    type: ClusterIP
    selector:
      dev: podtalk-pods
    ports:
      - port: 80
